k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saas-app # name for the namespace
  labels:
    environment: dev # tag for the environment
    managed-by: argocd # tag to indicate that this namespace is managed by ArgoCD
